--- a/index.html
+++ b/index.html
@@ -1,101 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>經緯度及方位距離計算器</title>
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>經緯度及方位距離計算器</h1>
-    <form id="calculator">
-        <label for="latitude">緯度：</label>
-        <input type="text" id="latitude" name="latitude"><br>
-        <label for="longitude">經度：</label>
-        <input type="text" id="longitude" name="longitude"><br>
-        <label for="bearing">方位：</label>
-        <input type="text" id="bearing" name="bearing"><br>
-        <label for="distance">距離：</label>
-        <input type="text" id="distance" name="distance"><br>
-        <button type="button" onclick="calculateNewCoordinates()">計算新的經緯度</button>
-    </form>
     <table>
-        <thead>
-            <tr>
-                <th>初始經緯度</th>
-                <th>方位</th>
-                <th>距離</th>
-                <th>新的緯度</th>
-                <th>新的經度</th>
-            </tr>
-        </thead>
-        <tbody id="resultTable">
-            <!-- 計算結果將插入此處 -->
-        </tbody>
+      <tr>
+        <td>緯度：</td>
+        <td><input type="text" id="lat_deg" size="2">° <input type="text" id="lat_min" size="2">' <input type="text" id="lat_sec" size="2">'' N</td>
+      </tr>
+      <tr>
+        <td>經度：</td>
+        <td><input type="text" id="lon_deg" size="2">° <input type="text" id="lon_min" size="2">' <input type="text" id="lon_sec" size="2">'' E</td>
+      </tr>
+      <tr>
+        <td>方位：</td>
+        <td><input type="text" id="bearing" size="3">°</td>
+      </tr>
+      <tr>
+        <td>距離：</td>
+        <td><input type="text" id="distance" size="10"> km</td>
+      </tr>
+      <tr>
+        <td colspan="2"><button onclick="calculate()">計算</button></td>
+      </tr>
     </table>
-
+    <br>
+    <table id="result" border="1">
+      <tr>
+        <th>緯度</th>
+        <th>經度</th>
+      </tr>
+      <tr>
+        <td><input type="text" id="new_lat_deg" size="2">° <input type="text" id="new_lat_min" size="2">' <input type="text" id="new_lat_sec" size="2">'' N</td>
+        <td><input type="text" id="new_lon_deg" size="2">° <input type="text" id="new_lon_min" size="2">' <input type="text" id="new_lon_sec" size="2">'' E</td>
+      </tr>
+    </table>
     <script>
-        const resultTable = document.getElementById('resultTable');
-
-        // 轉換經緯度為時分秒格式
-        function toDMS(coord) {
-            const absolute = Math.abs(coord);
-            const degrees = Math.floor(absolute);
-            const minutesNotTruncated = (absolute - degrees) * 60;
-            const minutes = Math.floor(minutesNotTruncated);
-            const seconds = Math.floor((minutesNotTruncated - minutes) * 60);
-            return degrees + "°" + minutes + "′" + seconds + "″";
+      function calculate() {
+        var lat_deg = parseFloat(document.getElementById("lat_deg").value);
+        var lat_min = parseFloat(document.getElementById("lat_min").value);
+        var lat_sec = parseFloat(document.getElementById("lat_sec").value);
+        var lon_deg = parseFloat(document.getElementById("lon_deg").value);
+        var lon_min = parseFloat(document.getElementById("lon_min").value);
+        var lon_sec = parseFloat(document.getElementById("lon_sec").value);
+        var bearing = parseFloat(document.getElementById("bearing").value);
+        var distance = parseFloat(document.getElementById("distance").value);
+        var lat = lat_deg + lat_min/60 + lat_sec/3600;
+        var lon = lon_deg + lon_min/60 + lon_sec/3600;
+        var lat_r = lat * Math.PI/180;
+        var lon_r = lon * Math.PI/180;
+        var bearing_r = bearing * Math.PI/180;
+        var distance_r = distance / 3440.06479; // 1海浬 = 3440.06479 km
+        var new_lat_r = Math.asin(Math.sin(lat_r) * Math.cos(distance_r) + Math.cos(lat_r) * Math.sin(distance_r) * Math.cos(bearing_r));
+        var new_lon_r = lon_r + Math.atan2(Math.sin(bearing_r) * Math.sin(distance_r) * Math.cos(lat_r), Math.cos(distance_r) - Math.sin(lat_r) * Math.sin(new_lat_r));
+        var new_lat = new_lat_r * 180/Math.PI;
+        var new_lon = new_lon_r * 180/Math.PI;
+        var new_lat_deg = Math.floor(new_lat);
+        var new_lat_min = Math.floor((new_lat - new_lat_deg) * 60);
+        var new_lat_sec = ((new_lat - new_lat_deg) * 60 - new_lat_min) * 60;
+        var new_lon_deg = Math.floor(new_lon);
+        var new_lon_min = Math.floor((new_lon - new_lon_deg) * 60);
+        var new_lon_sec = ((new_lon - new_lon_deg) * 60 - new_lon_min) * 60;
+        document.getElementById("new_lat_deg").value = new_lat_deg;
+        document.getElementById("new_lat_min").value = new_lat_min;
+        document.getElementById("new_lat_sec").value = new_lat_sec.toFixed(2);
+        document.getElementById("new_lon_deg").value = new_lon_deg;
+        document.getElementById("new_lon_min").value = new_lon_min;
+        document.getElementById("new_lon_sec").value = new_lon_sec.toFixed(2);
+        var table = document.getElementById("result");
+        var row = table.insertRow(-1);
+        var cell1 = row.insertCell(0);
+        var cell2 = row.insertCell(1);
+        cell1.innerHTML = new_lat_deg + "° " + new_lat_min + "' " + new_lat_sec.toFixed(2) + "'' N";
+        cell2.innerHTML = new_lon_deg + "° " + new_lon_min + "' " + new_lon_sec.toFixed(2) + "'' E";
+        if (table.rows.length > 20) {
+          table.deleteRow(1);
         }
-
-        function calculateNewCoordinates() {
-            const latitude = parseFloat(document.getElementById('latitude').value);
-            const longitude = parseFloat(document.getElementById('longitude').value);
-            const bearing = parseFloat(document.getElementById('bearing').value);
-            const distance = parseFloat(document.getElementById('distance').value);
-
-            // Rhumb Line方法計算新的經緯度
-            const R = 6371;
-            const lat1_rad = latitude * Math.PI / 180;
-            const lon1_rad = longitude * Math.PI / 180;
-            const bearing_rad = bearing * Math.PI / 180;
-            const angular_distance = distance / R;
-
-            const lat2_rad = lat1_rad + angular_distance * Math.cos(bearing_rad);
-                        const lat2 = lat2_rad * 180 / Math.PI;
-
-            const delta_lon_rad = angular_distance * Math.sin(bearing_rad) / Math.cos(lat1_rad);
-            const lon2_rad = lon1_rad + delta_lon_rad;
-            const lon2 = lon2_rad * 180 / Math.PI;
-
-            const lat2_dms = (lat2 >= 0 ? "N" : "S") + toDMS(Math.abs(lat2));
-            const lon2_dms = (lon2 >= 0 ? "E" : "W") + toDMS(Math.abs(lon2));
-
-            // 將結果插入表格
-            const newRow = resultTable.insertRow(0);
-            newRow.insertCell(0).innerHTML = latitude.toFixed(6) + ', ' + longitude.toFixed(6);
-            newRow.insertCell(1).innerHTML = bearing;
-            newRow.insertCell(2).innerHTML = distance;
-            newRow.insertCell(3).innerHTML = lat2_dms;
-            newRow.insertCell(4).innerHTML = lon2_dms;
-
-            // 保留20行資料列
-            if (resultTable.rows.length > 20) {
-                resultTable.deleteRow(20);
-            }
-        }
+      }
     </script>
-</body>
+  </body>
 </html>
+
